# actix-rest-template

./: Cargo.toml  Dockerfile  README.md
migrations/2023-12-26-034533_create_posts/: up.sql
src/: error.rs  lib.rs  main.rs  routes.rs  schema.rs
src/handlers/: post_handler.rs
src/models/: post_model.rs  posts.rs
src/post/: error.rs  handler.rs  model.rs  route.rs
