[package]
name = "my-actix-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1.4", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.31", features = ["serde"]}
uuid = "1.6.1"
r2d2 = "0.8.0"

[[bin]]
name = "my-actix-app"
path = "src/main.rs"